# assembly-as-synthesis

./: .gitignore  IDEAS.md  README.md  blog.css  index.html  introduction.md  pyproject.toml  verify.md
examples/: demo.py  export_traces.py  run_experiments.py
papers/: INDEX.md  RESEARCH_REPORT.md  brainstorm_all30.md  search_results.json
src/counterplan/: __init__.py  cegis.py  geometry.py  llm_solver.py  repair.py  scaffolding.py  stability.py  structures.py  trace.py  viz.py  vlm_solver.py  z3_solver.py
src/counterplan/verifiers/: __init__.py  base.py  kinematic.py  landing.py  stability.py
tests/: test_kinematic.py
web/: app.js  embed.html  index.html  introduction.md  style.css
web/data/: arch_5.json  arch_7.json  cantilever_5.json  data.js  experiments.json  gothic_arch.json  post_and_lintel.json  pyramid_10.json  pyramid_10_blog.json  pyramid_6.json  run_llm_basic.json  run_vlm.json  traces.js  unstable_tower.json  wall_4.json  z3_trace.json
