[project]
name = "counterplan"
version = "0.1.0"
description = "CEGIS-based assembly sequence planning with repair synthesis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ipython"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
